--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-
+    <meta content="text/html" charset="utf8" />
+    <title>fist html file</title>
 </head>
 
 <body>
+    <p>This text belongs body tag of html file</p>
 
 </body>
 
