--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registro de usuario m2v2</title>
+    <title>registro de usuario</title>
 </head>
 <body>
     <form>
