--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ingreso al programa</title>
+    <title>ingreso al programa nueva version</title>
 </head>
 <body>
     <form> <!-- action="https://localhost:8080/applicacionWeb/autenticacion" method="POST">  -->
