page name changed

--- a/pages/site/index_bottom.html
+++ b/pages/site/index_bottom.html
@@ -287,7 +287,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        Bebidas desintoxicantes de Bogotá
+                        La imágen de productos de Bogotá
                     </div>
                     <div>
                         <div>
