--- a/pages/site/index_main.html
+++ b/pages/site/index_main.html
@@ -372,7 +372,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        Bebidas desintoxicantes de Bogotá
+                        La imágen de productos de Bogotá
                     </div>
                     <div>
                         <div>
