--- a/pages/css/fourth.html
+++ b/pages/css/fourth.html
@@ -54,7 +54,7 @@
             padding: 0.5em;
         }
 
-        input+label {
+        input[type="radio"]+label, input[type="checkbox"]+label {
             display: inline;
         }
 
@@ -81,7 +81,7 @@
             </p>
 
             <p>
-                <label for="nombre">Correo electrónico</label>
+                <label for="correo">Correo electrónico</label>
                 <input type="text" name="correo" id="correo" />
             </p>
 
