--- a/pages/html/first.html
+++ b/pages/html/first.html
@@ -35,7 +35,7 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="3" height="100">
+                <td height="100">
                     <!--<img src="images/spacer.gif" width="1" height="100" />-->
                 </td>
             </tr>
