--- a/pages/html/second.html
+++ b/pages/html/second.html
@@ -41,16 +41,18 @@
             </tr>
             <tr>
                 <td><img src="images/web_846e3e44f1c13729d7e0b31.jpg"></td>
-                <td></td>
+                <td rowspan="2"></td>
             </tr>
             <tr>
                 <td align="center">
                     <h6>JARRO DE LIMONADA</h6>
                     Vestido por Papelair Happy Weddings y la casita de lago en la campiña verde
                 </td>
-                <td></td>
             </tr>
         </table>
+        <div align="left">
+            <a href="third.html">Siguiente</a>
+        </div>
         <div align="right">
             <a href="first.html">Anterior</a>
         </div>
