--- a/pages/html/third.html
+++ b/pages/html/third.html
@@ -65,6 +65,9 @@
             de las tablas y de los formularios; cómo realizar transformaciones y transiciones con el fin de diseñar una
             página web.</li>
     </ul>
+    <div align="left">
+        <a href="fourth.html">Siguiente</a>
+    </div>
 </body>
 
 </html>
