--- a/pages/site/index_bottom.html
+++ b/pages/site/index_bottom.html
@@ -263,12 +263,11 @@
         nav>div:last-child>div:last-child {
             background-color: rgba(161, 88, 61, 0.8);
         }
-
     </style>
 </head>
 
 <body>
-    <div>
+    <header>
         <form>
             <nav>
                 <!-- links páginas -->
@@ -287,7 +286,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        La imágen de productos de Bogotá
+                        Bebidas desintoxicantes de Bogotá
                     </div>
                     <div>
                         <div>
@@ -365,6 +364,8 @@
                 </div>
             </nav>
         </form>
+    </header>
+    <main>
         <section>
             <!-- producto principal -->
             <div>
@@ -373,8 +374,7 @@
             <div>
             </div>
         </section>
-    </div>
-    <a href="index_main.html">main</a>
+    </main>
 </body>
 
 </html>
