--- a/pages/site/index_middle.html
+++ b/pages/site/index_middle.html
@@ -15,7 +15,7 @@
         body>div {
             margin: 0px;
             padding: 0px;
-            background-color:  sienna;
+            background-color: sienna;
         }
 
         a {
@@ -216,12 +216,11 @@
             height: 74px;
             padding-top: 1px;
         }
-
     </style>
 </head>
 
 <body>
-    <div>
+    <header>
         <form>
             <nav>
                 <!-- links páginas -->
@@ -240,7 +239,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        La imágen de productos de Bogotá
+                        Bebidas desintoxicantes de Bogotá
                     </div>
                     <div>
                         <div>
@@ -274,6 +273,8 @@
                 </div>
             </nav>
         </form>
+    </header>
+    <main>
         <section>
             <!-- producto principal -->
             <div>
@@ -282,8 +283,7 @@
             <div>
             </div>
         </section>
-    </div>
-    <a href="index_bottom.html">bottom</a>
+    </main>
 </body>
 
 </html>
