--- a/pages/site/index_top.html
+++ b/pages/site/index_top.html
@@ -15,7 +15,7 @@
         body>div {
             margin: 0px;
             padding: 0px;
-            background-color:sienna;
+            background-color: sienna;
         }
 
         a {
@@ -42,15 +42,7 @@
             font-size: small;
         }
 
-        div img {
-            vertical-align: middle;
-        }
-
-        a img {
-            vertical-align: text-bottom;
-        }
-
-        /*links páginas grupo*/
+         /*links páginas grupo*/
         nav>div:first-child {
             background-color: #44312b;
             display: flex;
@@ -91,12 +83,11 @@
         }
 
         nav>div:first-child>div>div * {}
-
     </style>
 </head>
 
 <body>
-    <div>
+    <header>
         <form>
             <nav>
                 <!-- links páginas -->
@@ -113,6 +104,8 @@
                 </div>
             </nav>
         </form>
+    </header>
+    <main>
         <section>
             <!-- producto principal -->
             <div>
@@ -121,8 +114,7 @@
             <div>
             </div>
         </section>
-    </div>
-    <a href="index_middle.html">middle</a>
+    </main>
 </body>
 
 </html>
