--- a/pages/css/thirdm.html
+++ b/pages/css/thirdm.html
@@ -29,12 +29,18 @@
         @media screen and (min-width:601px) and (max-width:1200px) {
             h1+div {
                 width: 25%;
+                height: 600px;
             }
 
             h1+div+div,
             h1+div+div+div {
                 width: 75%;
             }
+
+            /*
+            h1+div+div+div {
+                margin-left:25%;
+            }*/
 
             div+div ul {
                 list-style-type: none;
@@ -80,6 +86,7 @@
             <li>Año de publicación: 2015</li>
             <li>ISBN: 978-84-944049-4-8</li>
         </ul>
+        <!--<img src="../html/images/spacer.gif" height="300" width="1" />-->
     </div>
 
     <div>
@@ -140,6 +147,7 @@
                 página web.</li>
         </ul>
     </div>
+    <div><a href="fourth.html">Siguiente</a></div>
 </body>
 
 </html>
