--- a/pages/css/thirdth.html
+++ b/pages/css/thirdth.html
@@ -117,6 +117,7 @@
                 página web.</li>
         </ul>
     </div>
+    <div><a href="thirdm.html">Siguiente</a></div>
 </body>
 
 </html>
