--- a/pages/site/index_list.html
+++ b/pages/site/index_list.html
@@ -378,7 +378,7 @@
 </head>
 
 <body>
-    <div>
+    <header>
         <form>
             <nav>
                 <!-- links páginas -->
@@ -397,7 +397,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        La imágen de productos de Bogotá
+                        Bebidas desintoxicantes de Bogotá
                     </div>
                     <div>
                         <div>
@@ -475,6 +475,8 @@
                 </div>
             </nav>
         </form>
+    </header>
+    <main>
         <section>
             <!-- producto principal -->
             <div>
@@ -509,7 +511,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </main>
 </body>
 
 </html>
