--- a/pages/site/index_main.html
+++ b/pages/site/index_main.html
@@ -348,12 +348,11 @@
             vertical-align: middle;
             border-radius: 2px;
         }
-
     </style>
 </head>
 
 <body>
-    <div>
+    <header>
         <form>
             <nav>
                 <!-- links páginas -->
@@ -372,7 +371,7 @@
                 <div>
                     <div>
                         <img src="imgs/kanata-img.gif" alt="Kanata" />
-                        La imágen de productos de Bogotá
+                        Bebidas desintoxicantes de Bogotá
                     </div>
                     <div>
                         <div>
@@ -450,6 +449,8 @@
                 </div>
             </nav>
         </form>
+    </header>
+    <main>
         <section>
             <!-- producto principal -->
             <div>
@@ -469,8 +470,7 @@
             <div>
             </div>
         </section>
-    </div>
-    <a href="index_list.html">list</a>
+    </main>
 </body>
 
 </html>
