--- a/pages/css/thirdm.html
+++ b/pages/css/thirdm.html
@@ -32,8 +32,7 @@
                 height: 600px;
             }
 
-            h1+div+div,
-            h1+div+div+div {
+            div+div {
                 width: 75%;
             }
 
