cambios de textos

--- a/pages/css/fourth.html
+++ b/pages/css/fourth.html
@@ -71,7 +71,7 @@
         <h2>Formulario de registro</h2>
     </header>
 
-    <form action="" method="post">
+    <form method="post">
         <fieldset>
             <legend>¿Quién eres?</legend>
             <p>
